Hide labels altogether if user specifies